Removed interativity requirement from checkbox and switchs

--- a/LiveTest/LiveTest/Components/App.razor
+++ b/LiveTest/LiveTest/Components/App.razor
@@ -16,7 +16,7 @@
     <HeadOutlet />
 </head>
 
-<body>
+<body theme="default">
     <Routes />
     <script src="_framework/blazor.web.js"></script>
     <script src="_content/TnTComponents/scripts/TnTComponents.js"></script>
