--- a/TnTComponents/Forms/TnTPasswordBox.razor
+++ b/TnTComponents/Forms/TnTPasswordBox.razor
@@ -14,29 +14,31 @@
 
     <label class="@GetLabelCssClass()" @onclick="SetInputFocus">@Label</label>
 
-    @switch (IconType) {
-        case IconType.FontAwesome:
-            <i class="tnt-password-reveal fa fa-eye@(PasswordRevealed ? "-slash" : string.Empty)"
-               @onmousedown="@(() => PasswordRevealed = true)"
-               @onmouseup="@(() => PasswordRevealed = false)"
-               @onmouseout="@(() => PasswordRevealed = false)"></i>
-            break;
+    @if (Interactive) {
+        @switch (IconType) {
+            case IconType.FontAwesome:
+                <i class="tnt-password-reveal fa fa-eye@(PasswordRevealed ? "-slash" : string.Empty)"
+                   @onmousedown="@(() => PasswordRevealed = true)"
+                   @onmouseup="@(() => PasswordRevealed = false)"
+                   @onmouseout="@(() => PasswordRevealed = false)"></i>
+                break;
 
-        case IconType.MaterialIcons:
-            <i class="tnt-password-reveal material-icons" @onmousedown="@(() => PasswordRevealed = true)"
-               @onmouseup="@(() => PasswordRevealed = false)"
-               @onmouseout="@(() => PasswordRevealed = false)">
-                @if (PasswordRevealed) {
-                    <text>visibility_off</text>
-                }
-                else {
-                    <text>visibility</text>
-                }
-            </i>
-            break;
+            case IconType.MaterialIcons:
+                <i class="tnt-password-reveal material-icons" @onmousedown="@(() => PasswordRevealed = true)"
+                   @onmouseup="@(() => PasswordRevealed = false)"
+                   @onmouseout="@(() => PasswordRevealed = false)">
+                    @if (PasswordRevealed) {
+                        <text>visibility_off</text>
+                    }
+                    else {
+                        <text>visibility</text>
+                    }
+                </i>
+                break;
 
-        default:
-            throw new NotImplementedException();
+            default:
+                throw new NotImplementedException();
+        }
     }
 
 
