--- a/LiveTest/LiveTest.Client/Pages/Home.razor
+++ b/LiveTest/LiveTest.Client/Pages/Home.razor
@@ -1,7 +1,9 @@
 ﻿@page "/"
+@using System.ComponentModel.DataAnnotations
+@using TnTComponents
+@using TnTComponents.Enum
+@using TnTComponents.Forms
 
-<PageTitle>Home</PageTitle>
+<TestScreen>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+</TestScreen>
