--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -9,6 +9,7 @@
     <SideNav>
         <TnTSideNavList>
             <TnTSideNavListItem Icon="home" Label="Home" Href="/" Match="NavLinkMatch.All" />
+            <TnTSideNavListItem Icon="business" Label="Interactive" Href="interactive" />
             <TnTSideNavListItem Icon="add_circle" Label="Counter" Href="counter" />
             <TnTSideNavListItem Label="Weather" Href="weather" />
         </TnTSideNavList>
