--- a/LiveTest/LiveTest/Components/Layout/NavMenu.razor
+++ b/LiveTest/LiveTest/Components/Layout/NavMenu.razor
@@ -15,10 +15,17 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="interactive">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Interactive
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
             </NavLink>
         </div>
+
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="weather">
