--- a/TnTComponents/Styles/Components/forms/_checkbox.scss
+++ b/TnTComponents/Styles/Components/forms/_checkbox.scss
@@ -13,35 +13,41 @@
         cursor: pointer;
     }
 
-    input[type=checkbox] {
-        position: absolute;
-        opacity: 0;
-        pointer-events: none;
+    .tnt-form-field-label {
+        padding-left: 32px;
+        input[type=checkbox] {
+            position: absolute;
+            opacity: 0;
+            pointer-events: none;
 
-        + span {
-            position: relative;
-            padding-left: 2rem;
-            cursor: pointer;
-            font-size: 1rem;
-            user-select: none;
-            display: flex;
-            align-items: center;
-            align-content: center;
-            justify-content: center;
-            flex-direction: row;
+            + span {
+                position: relative;
+                padding-left: 2rem;
+                cursor: pointer;
+                font-size: 1rem;
+                user-select: none;
+                display: flex;
+                align-items: center;
+                align-content: center;
+                justify-content: center;
+                flex-direction: row;
+                left:-32px;
 
-            &:before {
-                content: '';
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 1.1rem;
-                height: 1.1rem;
-                background-color: transparent;
-                @extend .tnt-border-radius-1;
+                &:before {
+                    content: '';
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 1.1rem;
+                    height: 1.1rem;
+                    background-color: transparent;
+                    @extend .tnt-border-radius-1;
+                }
             }
         }
     }
+
+
 
     &:not(.filled) input[type=checkbox] {
         &:checked {
