Minor improvements to Checkbox

--- a/TnTComponents/Forms/TnTCheckbox.razor
+++ b/TnTComponents/Forms/TnTCheckbox.razor
@@ -15,7 +15,7 @@
                @onfocusin="OnFocusInAsync"
                @onfocusout="OnFocusOutAsync" />
 
-        <span @onclick="Toggle">
+        <span>
             @if (FormType == FormType.Filled) {
                 <span></span>
             }
