--- a/TnTComponents/Styles/Components/forms/_checkbox.scss
+++ b/TnTComponents/Styles/Components/forms/_checkbox.scss
@@ -15,12 +15,17 @@
 
     .tnt-form-field-label {
         padding-left: 32px;
+
         input[type=checkbox] {
             position: absolute;
             opacity: 0;
             pointer-events: none;
 
             + span {
+                &:active {
+                    background-color: red;
+                }
+
                 position: relative;
                 padding-left: 2rem;
                 cursor: pointer;
@@ -31,7 +36,7 @@
                 align-content: center;
                 justify-content: center;
                 flex-direction: row;
-                left:-32px;
+                left: -32px;
 
                 &:before {
                     content: '';
@@ -41,6 +46,7 @@
                     width: 1.1rem;
                     height: 1.1rem;
                     background-color: transparent;
+                    pointer-events: none;
                     @extend .tnt-border-radius-1;
                 }
             }
@@ -79,6 +85,7 @@
             z-index: 0;
             transition: 150ms;
             border-radius: 100%;
+            pointer-events: none;
         }
     }
 
@@ -90,6 +97,7 @@
                     clip-path: circle(100%);
                     transition: border 150ms, background-color 150ms, width 150ms 75ms, height 150ms 75ms, top 150ms 75ms, left 150ms 75ms;
                     z-index: 1;
+                    pointer-events: none;
                 }
 
                 &:after {
@@ -102,6 +110,7 @@
                     z-index: 0;
                     transition: 150ms;
                     border-radius: 100%;
+                    pointer-events: none;
                 }
 
                 span:after {
@@ -128,12 +137,14 @@
                         top: 10px;
                         transform: rotateZ(37deg);
                         transform-origin: 100% 100%;
+                        pointer-events: none;
                     }
 
                     span:after {
                         width: 1.1rem;
                         height: 1.1rem;
                         background-color: transparent;
+                        pointer-events: none;
                     }
                 }
             }
@@ -149,12 +160,14 @@
                     transform: none;
                     transform: rotateZ(37deg);
                     transform-origin: 100% 100%;
+                    pointer-events: none;
                 }
 
                 + span span:after {
                     width: 1.35rem;
                     height: 1.35rem;
                     z-index: 0;
+                    pointer-events: none;
                 }
             }
         }
