Enabled drop down to work non interactive

--- a/TnTComponents/Styles/Components/forms/_dropdown.scss
+++ b/TnTComponents/Styles/Components/forms/_dropdown.scss
@@ -10,7 +10,7 @@
         user-select: none;
     }
 
-    &.active {
+    &:focus, &:active, &:focus-within {
         ul {
             visibility: visible;
             opacity: 1;
